<feat><interface ok>

--- a/App/index.html
+++ b/App/index.html
@@ -25,12 +25,51 @@
                         </span>
                     </div>
                 </div>
+                <section id="filter">
+                    <div id="filter__tags">
+
+                    </div>
+                    <div>
+                        <div class="filter__buttons">
+                            <div>
+                                <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
+                                    <input class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
+                                    <i class="bi bi-chevron-down"></i>
+                                    <i class="bi bi-chevron-up"></i>
+                                </button>
+                                <ul id="ingredients-list" role="listbox" class="tags-list">
+                                </ul>
+                            </div>
+                            <div>
+                                <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
+                                    <input class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
+                                    <i class="bi bi-chevron-down"></i>
+                                    <i class="bi bi-chevron-up"></i>
+                                </button>
+                                <ul id="appliances-list" role="listbox" class="tags-list">
+                                </ul>
+                            </div>
+                            <div>
+                                <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
+                                    <input class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
+                                    <i class="bi bi-chevron-down"></i>
+                                    <i class="bi bi-chevron-up"></i>
+                                </button>
+                                <ul id="ustensils-list" role="listbox" class="tags-list">
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div id="recipe-section" class="row row-cols-1 row-cols-md-3 g-4">
                 </div>
             </div>
         </main>
         <script src="./js/recipes.js"></script>
         <script src="./js/FactoryRecipes.js"></script>
+        <script src="./js/buttons.js"></script>
+        <script src="./js/tags.js"></script>
         <script src="./js/index.js"></script>
+
     </body>
 </html>
