<feat><réorganisation code>

--- a/App/index.html
+++ b/App/index.html
@@ -65,10 +65,10 @@
                 </div>
             </div>
         </main>
-        <script src="./js/recipes.js"></script>
-        <script src="./js/FactoryRecipes.js"></script>
-        <script src="./js/buttons.js"></script>
-        <script src="./js/tags.js"></script>
+        <script src="js/Data/recipes.js"></script>
+        <script src="js/Factory/FactoryRecipes.js"></script>
+        <script src="js/Composants/buttons.js"></script>
+        <script src="js/Composants/tags.js"></script>
         <script src="./js/index.js"></script>
 
     </body>
