<feat><recherche début commun aux deux algo>

--- a/App/index.html
+++ b/App/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="css/style.css" rel="stylesheet" type="text/css" >
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" href="logo/toque.png">
+        <link rel="icon" type="image/png" href="images/toque.png">
         <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
         <title>Les petits plats</title>
     </head>
@@ -69,6 +69,7 @@
         <script src="js/Factory/FactoryRecipes.js"></script>
         <script src="js/Composants/buttons.js"></script>
         <script src="js/Composants/tags.js"></script>
+        <script src="js/Research/research.js"></script>
         <script src="./js/index.js"></script>
 
     </body>
