<feat><mise en place de la recherche>

--- a/App/index.html
+++ b/App/index.html
@@ -70,6 +70,7 @@
         <script src="js/Composants/buttons.js"></script>
         <script src="js/Composants/tags.js"></script>
         <script src="js/Research/research.js"></script>
+        <script src="js/Utils/refactorDOM.js"></script>
         <script src="./js/index.js"></script>
 
     </body>
