--- a/App/index.html
+++ b/App/index.html
@@ -46,7 +46,7 @@
                                     <i class="bi bi-chevron-down"></i>
                                     <i class="bi bi-chevron-up"></i>
                                 </button>
-                                <ul id="appliance-list" role="listbox" class="tags-list">
+                                <ul id="appliances-list" role="listbox" class="tags-list">
                                 </ul>
                             </div>
                             <div>
