<feat><fonctions recherche 2nd algo>

--- a/App/index.html
+++ b/App/index.html
@@ -33,7 +33,7 @@
                         <div class="filter__buttons">
                             <div>
                                 <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
-                                    <input class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
+                                    <input id="input-ingredients" class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
                                     <i class="bi bi-chevron-down"></i>
                                     <i class="bi bi-chevron-up"></i>
                                 </button>
@@ -42,7 +42,7 @@
                             </div>
                             <div>
                                 <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
-                                    <input class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
+                                    <input id="input-appliances" class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
                                     <i class="bi bi-chevron-down"></i>
                                     <i class="bi bi-chevron-up"></i>
                                 </button>
@@ -51,7 +51,7 @@
                             </div>
                             <div>
                                 <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
-                                    <input class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
+                                    <input id="input-ustensils" class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
                                     <i class="bi bi-chevron-down"></i>
                                     <i class="bi bi-chevron-up"></i>
                                 </button>
@@ -69,6 +69,7 @@
         <script src="js/Factory/FactoryRecipes.js"></script>
         <script src="js/Composants/buttons.js"></script>
         <script src="js/Composants/tags.js"></script>
+        <script src="js/Composants/noResult.js"></script>
         <script src="js/Research/research.js"></script>
         <script src="js/Utils/refactorDOM.js"></script>
         <script src="./js/index.js"></script>
