<fix><fichier index.html a la racine>

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <link href="css/style.css" rel="stylesheet" type="text/css" >
+        <link href="App/css/style.css" rel="stylesheet" type="text/css" >
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" href="images/toque.png">
+        <link rel="icon" type="image/png" href="App/Images/toque.png">
         <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
         <title>Les petits plats</title>
     </head>
@@ -65,14 +65,14 @@
                 </div>
             </div>
         </main>
-        <script src="js/Data/recipes.js"></script>
-        <script src="js/Factory/FactoryRecipes.js"></script>
-        <script src="js/Composants/buttons.js"></script>
-        <script src="js/Composants/tags.js"></script>
-        <script src="js/Composants/noResult.js"></script>
-        <script src="js/Research/research.js"></script>
-        <script src="js/Utils/refactorDOM.js"></script>
-        <script src="./js/index.js"></script>
+        <script src="App/js/Data/recipes.js"></script>
+        <script src="App/js/Factory/FactoryRecipes.js"></script>
+        <script src="App/js/Composants/buttons.js"></script>
+        <script src="App/js/Composants/tags.js"></script>
+        <script src="App/js/Composants/noResult.js"></script>
+        <script src="App/js/Research/research.js"></script>
+        <script src="App/js/Utils/refactorDOM.js"></script>
+        <script src="App/js/index.js"></script>
 
     </body>
 </html>
