--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <input id="search-input" type="text" class="form-control form-control-lg" placeholder="Rechercher une recette"
                                aria-label="Rechercher une recette" aria-describedby="search-span" />
                         <span class="input-group-text border-0" id="search-span">
-                            <i class="bi bi-search"></i>
+                            <img class="bi bi-search" src="App/Images/search.svg"></img>
                         </span>
                     </div>
                 </div>
@@ -34,8 +34,8 @@
                             <div>
                                 <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
                                     <input id="input-ingredients" class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
-                                    <i class="bi bi-chevron-down"></i>
-                                    <i class="bi bi-chevron-up"></i>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" />
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg"/>
                                 </button>
                                 <ul id="ingredients-list" role="listbox" class="tags-list">
                                 </ul>
@@ -43,8 +43,8 @@
                             <div>
                                 <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
                                     <input id="input-appliances" class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
-                                    <i class="bi bi-chevron-down"></i>
-                                    <i class="bi bi-chevron-up"></i>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg"/>
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg"/>
                                 </button>
                                 <ul id="appliances-list" role="listbox" class="tags-list">
                                 </ul>
@@ -52,8 +52,8 @@
                             <div>
                                 <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
                                     <input id="input-ustensils" class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
-                                    <i class="bi bi-chevron-down"></i>
-                                    <i class="bi bi-chevron-up"></i>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" />
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" />
                                 </button>
                                 <ul id="ustensils-list" role="listbox" class="tags-list">
                                 </ul>
