<fix><fin corrections erreur html>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <input id="search-input" type="text" class="form-control form-control-lg" placeholder="Rechercher une recette"
                                aria-label="Rechercher une recette" aria-describedby="search-span" />
                         <span class="input-group-text border-0" id="search-span">
-                            <img class="bi bi-search" src="App/Images/search.svg"/>
+                            <img class="bi bi-search" src="App/Images/search.svg" alt="icone loupe">
                         </span>
                     </div>
                 </div>
@@ -34,8 +34,8 @@
                             <form>
                                 <input id="input-ingredients" class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
                                 <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas" />
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut"/>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas" >
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
                                 </button>
                                 <ul id="ingredients-list" role="listbox" class="tags-list">
                                 </ul>
@@ -43,8 +43,8 @@
                             <form>
                                 <input id="input-appliances" class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
                                 <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas"/>
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg"alt="chevron haut"/>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
                                 </button>
                                 <ul id="appliances-list" role="listbox" class="tags-list">
                                 </ul>
@@ -52,8 +52,8 @@
                             <form>
                                 <input id="input-ustensils" class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
                                 <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas"/>
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut"/>
+                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
+                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
                                 </button>
                                 <ul id="ustensils-list" role="listbox" class="tags-list">
                                 </ul>
