--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div id="search" class="input-group input-group-lg">
                         <input id="search-input" type="text" class="form-control form-control-lg" placeholder="Rechercher une recette"
-                               aria-label="Rechercher une recette" aria-describedby="search-span" />
+                               aria-label="Rechercher une recette" aria-describedby="search-span" >
                         <span class="input-group-text border-0" id="search-span">
                             <img class="bi bi-search" src="App/Images/search.svg" alt="icone loupe">
                         </span>
