<fix><modif pour les listes pb affichage suite modifications précédentes>

--- a/index.html
+++ b/index.html
@@ -32,29 +32,35 @@
                     <div>
                         <div class="filter__buttons">
                             <form>
-                                <input id="input-ingredients" class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
-                                <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas" >
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
-                                </button>
+                                <div>
+                                    <input id="input-ingredients" class="form-control" type="text" placeholder="Ingrédients" aria-label="choix ingrédients">
+                                    <button id="btn-ingredient" type="button" class="btn btn-primary btn-lg">
+                                        <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas" >
+                                        <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
+                                    </button>
+                                </div>
                                 <ul id="ingredients-list" role="listbox" class="tags-list">
                                 </ul>
                             </form>
                             <form>
-                                <input id="input-appliances" class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
-                                <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
-                                </button>
+                                <div>
+                                    <input id="input-appliances" class="form-control" type="text" placeholder="Appareils" aria-label="choix appareils">
+                                    <button id="btn-appliance" type="button" class="btn btn-secondary btn-lg">
+                                        <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
+                                        <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
+                                    </button>
+                                </div>
                                 <ul id="appliances-list" role="listbox" class="tags-list">
                                 </ul>
                             </form>
                             <form>
-                                <input id="input-ustensils" class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
-                                <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
-                                    <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
-                                    <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
-                                </button>
+                                <div>
+                                    <input id="input-ustensils" class="form-control" type="text" placeholder="Ustensiles" aria-label="choix ustensiles">
+                                    <button id="btn-ustensil" type="button" class="btn btn-success btn-lg">
+                                        <img class="bi bi-chevron-down" src="App/Images/chevron-down.svg" alt="chevron bas">
+                                        <img class="bi bi-chevron-up" src="App/Images/chevron-up.svg" alt="chevron haut">
+                                    </button>
+                                </div>
                                 <ul id="ustensils-list" role="listbox" class="tags-list">
                                 </ul>
                             </form>
